dark mode fix

--- a/main_landscape.css
+++ b/main_landscape.css
@@ -33,7 +33,7 @@ html {
     max-width: 100vw;
     min-width: 400px;*/
   }
-  @media only screen and (prefers-color-scheme: dark), (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  @media only screen and (prefers-color-scheme: light), (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
   .tablemobile {
       overflow-x: hidden;
       display: block;
